<!--
  ~ Copyright (c) 2017.
  ~  Student Vsevolod
  ~  usevalad.uladzimiravich@gmail.com
  -->

<resources>
    <string name="app_name">MegaKitTest</string>
    <string name="action_settings">Settings</string>
    <string name="driver_full_name">Name: %1$s %2$s</string>
    <string name="driver_first_name_arg">First name: %1$s</string>
    <string name="driver_last_name_arg">Last name: %1$s</string>
    <string name="driver_phone_number_arg">Phone number: %1$s</string>
    <string name="driver_first_name">First name:</string>
    <string name="driver_last_name">Last name:</string>
    <string name="driver_phone_number">Phone number:</string>
    <string name="main_car_body_type">Body type: %1$s</string>
    <string name="car_body_type">Body type</string>
    <string name="main_car_model">Model: %1$s</string>
    <string name="car_model">Model</string>
    <string name="main_car_manufacturer">Manufacturer: %1$s</string>
    <string name="car_manufacturer">Manufacturer</string>
    <string name="cars_title">Cars</string>
    <string name="drivers_title">Drivers</string>
    <string name="title_activity_car">CarActivity</string>
    <string name="title_activity_driver">DriverActivity</string>
    <string name="delete_cars">Delete all cars</string>
    <string name="delete_drivers">Delete all drivers</string>
    <string name="color">Color</string>
    <string name="object_deleted">%1$s %2$s deleted</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="fill_field">Fill in the field</string>
    <string name="number_format">+380XXXXXXXXX</string>
    <string name="nuber_to_long">Номер слишком длинный</string>
    <string name="nuber_to_short">Номер слишком короткий</string>
    <string name="ukraine_code">+380</string>
</resources>