<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vsevolod.megakittest.fragment.ReadCarFragment">

    <ImageView
        android:id="@+id/car_image_view"
        android:layout_width="match_parent"
        android:layout_height="270dp" />

    <TextView
        android:id="@+id/car_manufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/car_image_view"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:text="@string/car_manufacturer"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/car_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/car_manufacturer"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:inputType="textPersonName"
        android:text="@string/car_model"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/car_body_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/car_model"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:inputType="textPersonName"
        android:text="@string/car_body_type"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/color_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/car_body_type"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="6dp"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:src="@drawable/rounded_input_shape"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/car_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/car_body_type"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/color"
        android:textSize="18sp" />
</RelativeLayout>