<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017.
  ~  Student Vsevolod
  ~  usevalad.uladzimiravich@gmail.com
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/driver_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vsevolod.megakittest.activity.DriverActivity"
    tools:showIn="@layout/activity_driver">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/details_driver_first_name_container"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_input_shape"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/driver_first_name"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/details_driver_first_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Valera"
                android:textSize="18dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/details_driver_first_name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:minWidth="80dp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/details_driver_last_name_container"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_input_shape"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/driver_last_name"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/details_driver_last_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Last"
                android:textSize="18dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/details_driver_last_name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:minWidth="80dp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/details_driver_phone_number_container"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_input_shape"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/phone_number_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/driver_phone_number"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/details_driver_phone_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Last"
                android:textSize="18dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/details_driver_phone_number_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:minWidth="80dp"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>